--- a/inline.html
+++ b/inline.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Example inline Css</title>
 </head>
 <body>
-   <h2>Types of Css :- </h2>
-   <a href="inline.html">INLINE CSS</a> <br><br>
-   <a href="Internal.html">INTERNAL CSS</a> <br><br>
-   <a href="External.html">EXTERNAL CSS</a> 
+    
+    <h1 style="color: blue; font-style: italic;" >Hi, My name is Ashish Ramavat</h1>
 </body>
 </html>
