--- a/Internal.html
+++ b/Internal.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Example Internal Css type</title>
+
+    <style>
+        h1{
+            color: orangered;
+        }
+    </style>
 </head>
 <body>
-   <h2>Types of Css :- </h2>
-   <a href="inline.html">INLINE CSS</a> <br><br>
-   <a href="Internal.html">INTERNAL CSS</a> <br><br>
-   <a href="External.html">EXTERNAL CSS</a> 
+    
+    <h1>I am from orange city Nagpur. I wish we all get our dream job.</h1>
 </body>
 </html>
