--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
    <h2>Types of Css :- </h2>
    <a href="inline.html">INLINE CSS</a> <br><br>
    <a href="Internal.html">INTERNAL CSS</a> <br><br>
-   <a href="External.html">EXTERNAL CSS</a> 
+   <a href="External.html">EXTERNAL CSS</a> <br><br>
+   <a href="Css-assignment.html">CSS ASSIGNMENT</a>
 </body>
 </html>
