--- a/Css-assignment.html
+++ b/Css-assignment.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-    <h1>WELcome</h1> 
+    <h1>Welcome</h1> 
 
     <P> Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed sapiente qui veritatis error <br>
         labore voluptas assumenda.Exercitationem sed cupiditate perspiciatis laborum nemo? <br>
