--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
    <a href="inline.html">INLINE CSS</a> <br><br>
    <a href="Internal.html">INTERNAL CSS</a> <br><br>
    <a href="External.html">EXTERNAL CSS</a> <br><br>
-   <a href="Css-assignment.html">CSS ASSIGNMENT</a>
+   <a href="Css-assignment.html">CSS ASSIGNMENT</a> <br><br>
+   <a href="textProperties.html">TEXT PROPERTIES</a>
 </body>
 </html>
