--- a/index.html
+++ b/index.html
@@ -5,12 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
+
+    <style>
+        body{
+            width: 750px;
+            height: 700px;
+            border: 5px solid;
+            border-radius: 1px 50px 1px 40px;
+            background-color: lightpink;
+            padding-left: 20px;
+            color: brown;   
+        }
+    </style>
 </head>
 <body>
-   <a href="inline.html">INLINE CSS</a> <br><br>
-   <a href="Internal.html">INTERNAL CSS</a> <br><br>
-   <a href="External.html">EXTERNAL CSS</a> <br><br>
-   <a href="Css-assignment.html">CSS ASSIGNMENT</a> <br><br>
-   <a href="textProperties.html">TEXT PROPERTIES</a>
+       <h1>Css-assignments</h1>
+
+   <a href="inline.html">- INLINE CSS</a> <br><br>
+   <a href="Internal.html">- INTERNAL CSS</a> <br><br>
+   <a href="External.html">- EXTERNAL CSS</a> <br><br>
+   <a href="Css-assignment.html">- CSS ASSIGNMENT</a> <br><br>
+   <a href="textProperties.html">- TEXT PROPERTIES</a> 
+
 </body>
 </html>
