--- a/inline.html
+++ b/inline.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     
-    <h1 style="color: blue; font-style: italic;" >Hi, My name is Ashish Ramavat</h1>
+    <h1 style="color: blue; font-style: italic; background-color: darkgoldenrod;" >Hi, My name is Ashish Ramavat</h1>
 </body>
 </html>
