--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
    <a href="Internal.html">- INTERNAL CSS</a> <br><br>
    <a href="External.html">- EXTERNAL CSS</a> <br><br>
    <a href="Css-assignment.html">- CSS ASSIGNMENT</a> <br><br>
-   <a href="textProperties.html">- TEXT PROPERTIES</a> 
+   <a href="textProperties.html">- TEXT PROPERTIES</a> <br><br>
+   <a href="Assignment-1.html">CSS-Assignment-01</a>
 
 </body>
 </html>
