--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
     <style>
         body{
-            width: 750px;
+            width: 700px;
             height: 700px;
             border: 5px solid;
-            border-radius: 1px 50px 1px 40px;
+            border-radius: 5px 70px 5px 40px;
             background-color: lightpink;
             padding-left: 20px;
             color: brown;   
@@ -19,14 +19,17 @@
     </style>
 </head>
 <body>
-       <h1>Css-assignments</h1>
+       <h1>Css-assignments :-</h1>
 
    <a href="inline.html">- INLINE CSS</a> <br><br>
    <a href="Internal.html">- INTERNAL CSS</a> <br><br>
    <a href="External.html">- EXTERNAL CSS</a> <br><br>
    <a href="Css-assignment.html">- CSS ASSIGNMENT</a> <br><br>
    <a href="textProperties.html">- TEXT PROPERTIES</a> <br><br>
-   <a href="Assignment-1.html">CSS-Assignment-01</a>
+   <a href="Assignment-1.html">- CSS-ASSIGNMENT-01</a> <br><br>
+   <a href="Zindex.html">- Z-INDEX-PROPERTY</a> <br><br>
+   <a href="list-propt.html">- LIST-PROPERTY</a> <br><br>
+   <a href="float-propt.html">- FLOAT-PROPERTY</a>
 
 </body>
 </html>
