--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
    <a href="textProperties.html">- TEXT PROPERTIES</a> <br><br>
    <a href="Assignment-1.html">- CSS-ASSIGNMENT-01</a> <br><br>
    <a href="Zindex.html">- Z-INDEX-PROPERTY</a> <br><br>
-   <a href="list-propt.html">- LIST-PROPERTY</a> <br><br>
-   <a href="float-propt.html">- FLOAT-PROPERTY</a>
+   <a href="list-style-propt.html">- LIST-STYLE-PROPERTY</a> <br><br>
+   <a href="float-propt.html">- FLOAT-PROPERTY</a> <br><br>
+   <a href="list-image.html">-LIST-IMAGE-PROPERTY </a>
 
 </body>
 </html>
