--- a/index.html
+++ b/index.html
@@ -32,5 +32,9 @@
    <a href="float-propt.html">- FLOAT-PROPERTY</a> <br><br>
    <a href="list-image.html">-LIST-IMAGE-PROPERTY </a>
 
+   <hr>
+
+   <a href="simple-selector.html">SIMPLE-SELECTORS</a>
+
 </body>
 </html>
