--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
    <a href="Zindex.html">- Z-INDEX-PROPERTY</a> <br><br>
    <a href="list-style-propt.html">- LIST-STYLE-PROPERTY</a> <br><br>
    <a href="float-propt.html">- FLOAT-PROPERTY</a> <br><br>
-   <a href="list-image.html">-LIST-IMAGE-PROPERTY </a>
+   <a href="list-image.html">- LIST-IMAGE-PROPERTY </a>
 
    <hr>
 
-   <a href="simple-selector.html">SIMPLE-SELECTORS</a>
+   <a href="simple-selector.html">SIMPLE-SELECTORS</a><br><br>
+   <a href="Assignment-02.html">- ASSIGNMENT-02</a>
 
 </body>
 </html>
