--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
    <hr>
 
    <a href="simple-selector.html">SIMPLE-SELECTORS</a><br><br>
-   <a href="Assignment-02.html">- ASSIGNMENT-02</a>
+   <a href="Assignment-02.html">- ASSIGNMENT-02</a> <br><br>
+   <a href="Assignment-03.html">- ASSIGNMENT-03</a>
 
 </body>
 </html>
