--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 
    <hr>
 
-   <a href="simple-selector.html">SIMPLE-SELECTORS</a><br><br>
+   <a href="simple-selector.html">- SIMPLE-SELECTORS</a><br><br>
+   <a href="Combinator-selector.html">- COMBINATOR-SELECTOR</a> <br><br>
    <a href="Assignment-02.html">- ASSIGNMENT-02</a> <br><br>
    <a href="Assignment-03.html">- ASSIGNMENT-03</a>
 
